TextImageGenerationServiceが画像を複数返せるようにした。